--- a/firmware/data/www/index.html
+++ b/firmware/data/www/index.html
@@ -1,134 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Pine32 — Dashboard</title>
-  <style>
-    body {
-      font-family: system-ui, Segoe UI, Roboto, Arial;
-      background: #0f1115;
-      color: #e5e7eb;
-      margin: 0;
-      height: 100vh;
-      display: flex;
-    }
-    .sidebar {
-      width: 220px;
-      background: #111827;
-      display: flex;
-      flex-direction: column;
-      padding: 16px;
-      box-shadow: 2px 0 10px rgba(0,0,0,0.3);
-    }
-    .logo {
-      font-weight: 700;
-      font-size: 18px;
-      color: #06b6d4;
-      margin-bottom: 24px;
-      text-align: center;
-    }
-    .nav {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-    .nav button {
-      background: none;
-      border: 0;
-      color: #9ca3af;
-      text-align: left;
-      padding: 10px 8px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-    .nav button:hover {
-      background: #1f2937;
-      color: #fff;
-    }
-    .main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-    header {
-      background: #1f2937;
-      padding: 12px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #374151;
-      position: relative;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 18px;
-      color: #06b6d4;
-    }
-    .dot-button {
-      background: none;
-      border: none;
-      font-size: 24px;
-      color: #06b6d4;
-      cursor: pointer;
-      padding: 4px 8px;
-      border-radius: 6px;
-      transition: background 0.2s;
-    }
-    .dot-button:hover {
-      background: #1f2937;
-    }
-    .popup-menu {
-      display: none;
-      position: absolute;
-      top: 48px;
-      right: 20px;
-      background: #1f2937;
-      border: 1px solid #374151;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      overflow: hidden;
-      z-index: 100;
-    }
-    .popup-menu button {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      background: none;
-      color: #e5e7eb;
-      text-align: left;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .popup-menu button:hover {
-      background: #374151;
-    }
-    .content {
-      flex: 1;
-      padding: 20px;
-      overflow-y: auto;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      color: #e5e7eb;
-    }
-    th, td {
-      padding: 10px;
-      border-bottom: 1px solid #374151;
-    }
-    th { text-align: left; color: #9ca3af; }
-    tr:hover { background: #1f2937; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <aside class="sidebar">
     <div class="logo">📡 Pine32</div>
     <div class="nav">
       <button onclick="loadPage('dashboard')">Dashboard</button>
-      <button onclick="loadPage('ap')">PineAP suite</button>
+      <button onclick="loadPage('picoap')">PicoAP Suite</button>
       <button onclick="loadPage('recon')">Recon</button>
       <button onclick="loadPage('logs')">Log</button>
       <button onclick="loadPage('settings')">Settings</button>
@@ -138,132 +21,34 @@
   <div class="main">
     <header>
       <h1 id="pageTitle">Dashboard</h1>
-
-      <!-- Three-dot popup menu -->
-      <div>
+      <div style="position:relative;">
         <button class="dot-button" onclick="togglePopup()">⋮</button>
-        <div class="popup-menu" id="popupMenu">
-          <button onclick="loadPage('profile')">Profile</button>
-          <button onclick="loadPage('settings')">Settings</button>
-          <button onclick="logout()">Logout</button>
+        <div id="popupMenu" class="popup-menu">
+          <button onclick="loadPage('profile'); togglePopup();">Profile</button>
+          <button onclick="loadPage('settings'); togglePopup();">Settings</button>
+          <button onclick="logout(); togglePopup();">Logout</button>
         </div>
       </div>
     </header>
 
     <div class="content" id="content">
-      <p>Welcome to <b>Pine32</b>. Use the sidebar to navigate modules.</p>
+      <div class="card">
+        <h2>Pine32 Dashboard</h2>
+        <p class="small">Use the left menu to open modules. Click <b>PicoAP Suite</b> for Wi-Fi tooling.</p>
+      </div>
     </div>
   </div>
 
-  <script>
-    async function scanNetworks() {
-      document.getElementById('pageTitle').textContent = 'Wi-Fi Scan';
-      document.getElementById('content').innerHTML = '<p>Scanning…</p>';
-      try {
-        const res = await fetch('/scan');
-        const data = await res.json();
-        if (Array.isArray(data)) {
-          let html = '<table><tr><th>SSID</th><th>RSSI</th><th>Channel</th><th>MAC</th></tr>';
-          data.forEach(ap => {
-            html += `<tr><td>${ap.ssid}</td><td>${ap.rssi}</td><td>${ap.channel}</td><td>${ap.bssid}</td></tr>`;
-          });
-          html += '</table>';
-          document.getElementById('content').innerHTML = html;
-        } else {
-          document.getElementById('content').innerHTML = '<p>No networks found.</p>';
-        }
-      } catch (e) {
-        document.getElementById('content').innerHTML = '<p>Error scanning: ' + e + '</p>';
-      }
-    }
+  <!-- Modal -->
+  <div id="modalRoot" style="display:none"></div>
 
-    // function loadPage(name) {
-    //   document.getElementById('pageTitle').textContent = name.charAt(0).toUpperCase() + name.slice(1);
-    //   document.getElementById('content').innerHTML = `<p>Loading ${name} module...</p>`;
-    // }
-    const modules = {
-  dashboard: () => `
-    <p>Welcome to <b>Pine32 Dashboard</b>. Here’s a quick overview:</p>
-    <ul>
-      <li>Total APs: 12</li>
-      <li>Clients connected: 8</li>
-      <li>System uptime: 3h 25m</li>
-    </ul>
-  `,
-  ap: () => `
-    <p>📡 <b>PicoAP Suite</b></p>
-    <button onclick="scanNetworks()">Scan Wi-Fi</button>
-    <div id="apResults"></div>
-  `,
-  recon: () => `
-    <p>🔍 <b>Recon Module</b></p>
-    <p>Use this module to gather information about nearby networks.</p>
-  `,
-  logs: () => `
-    <p>🧾 <b>Logs</b></p>
-    <ul>
-      <li>2025-10-14 12:00 - Scan completed</li>
-      <li>2025-10-14 12:05 - Client connected</li>
-      <li>2025-10-14 12:15 - Settings changed</li>
-    </ul>
-  `,
-  settings: () => `
-    <p>⚙️ <b>Settings</b></p>
-    <p>Configure your Pine32 modules here.</p>
-    <button onclick="alert('Settings saved!')">Save Settings</button>
-  `,
-  profile: () => `
-    <p>👤 <b>User Profile</b></p>
-    <p>Name: Admin</p>
-    <p>Role: Root</p>
-  `
-};
-
-function loadPage(name) {
-  // Update page title
-  const title = name.charAt(0).toUpperCase() + name.slice(1);
-  document.getElementById('pageTitle').textContent = title;
-
-  // Load module content
-  const contentDiv = document.getElementById('content');
-  if (modules[name]) {
-    contentDiv.innerHTML = modules[name]();
-  } else {
-    contentDiv.innerHTML = `<p>Module "${name}" not found.</p>`;
-  }
-
-  // Highlight active sidebar button
-  document.querySelectorAll('.nav button').forEach(btn => {
-    btn.style.background = '';
-    btn.style.color = '#9ca3af';
-  });
-  const activeBtn = Array.from(document.querySelectorAll('.nav button'))
-                         .find(b => b.textContent.toLowerCase().includes(name));
-  if (activeBtn) {
-    activeBtn.style.background = '#1f2937';
-    activeBtn.style.color = '#fff';
-  }
-
-  // Close popup menu if open
-  document.getElementById('popupMenu').style.display = 'none';
-}
-
-    function logout() {
-      fetch('/logout', {method: 'POST'}).then(()=>location.href='/login.html');
-    }
-
-    function togglePopup() {
-      const menu = document.getElementById('popupMenu');
-      menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-    }
-
-    window.addEventListener('click', function(event) {
-      const menu = document.getElementById('popupMenu');
-      const button = document.querySelector('.dot-button');
-      if (!menu.contains(event.target) && !button.contains(event.target)) {
-        menu.style.display = 'none';
-      }
-    });
-  </script>
+  <!-- Scripts -->
+  <script src="js/utils.js"></script>
+  <script src="js/dashboard.js"></script>
+  <script src="js/picoap.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/modules.js"></script>
+  <script src="js/main.js"></script>
+  
 </body>
 </html>
