--- a/firmware/data/www/login.html
+++ b/firmware/data/www/login.html
@@ -1,50 +1,63 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Pine32 — Login</title>
-  <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Arial;background:hsl(210, 100%, 5%);
-      display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
-    .box{background:rgb(162, 162, 162);padding:20px;border-radius:8px;box-shadow:0 8px 30px rgba(2,6,23,0.08);width:320px}
-    input{width:95%;padding:10px;margin:8px 0;border-radius:6px;border:1px solid #1a0101}
-    button{width:100%;padding:10px;border-radius:6px;border:0;background:#06b6d4;color:white;font-weight:600}
-    .hint{font-size:13px;color:#6b7280;margin-top:8px}
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <div class="box">
-    <h2 style="margin:0 0 12px 0">Pine32 — Login</h2>
-    <input id="password" type="password" placeholder="Root password" autocomplete="current-password"/>
-    <button id="loginBtn">Login</button>
-    <div id="msg" class="hint"></div>
+<body class="login-page">
+  <div class="login-box">
+    <h2>📡 Pine32 — Login</h2>
+    <form id="loginForm" onsubmit="return doLogin(event)">
+      <input id="password" type="password" placeholder="Enter root password" autocomplete="current-password" required />
+      <button id="loginBtn" type="submit">Login</button>
+    </form>
+    <p id="msg" class="muted-small" style="margin-top:8px;"></p>
   </div>
 
-<script>
-async function postForm(path, data) {
-  const body = new URLSearchParams(data);
-  const r = await fetch(path, { method: 'POST', body, credentials: 'include' });
-  const text = await r.text();
-  return { ok: r.ok, text };
-}
-
-document.getElementById('loginBtn').addEventListener('click', async ()=>{
-  const pw = document.getElementById('password').value;
-  document.getElementById('msg').innerText = 'Logging in…';
-  try {
-    const res = await postForm('/login', { password: pw });
-    if (res.ok) {
-      // login success -> redirect to main UI
-      localStorage.setItem('picoLoggedIn', 'true');
-      location.href = '/index.html';
-    } else {
-      document.getElementById('msg').innerText = res.text || 'Login failed';
+  <script>
+    // ===== Login Request =====
+    async function postForm(path, data) {
+      const body = new URLSearchParams(data);
+      const res = await fetch(path, {
+        method: 'POST',
+        body,
+        credentials: 'include'
+      });
+      const text = await res.text();
+      return { ok: res.ok, text };
     }
-  } catch (e) {
-    document.getElementById('msg').innerText = 'Error: ' + e.message;
-  }
-});
-</script>
+
+    async function doLogin(e) {
+      e.preventDefault();
+      const pw = document.getElementById('password').value.trim();
+      const msg = document.getElementById('msg');
+      const btn = document.getElementById('loginBtn');
+
+      msg.textContent = 'Logging in...';
+      btn.disabled = true;
+
+      try {
+        const res = await postForm('/login', { password: pw });
+        if (res.ok) {
+          localStorage.setItem('picoLoggedIn', 'true');
+          msg.textContent = '✅ Login successful. Redirecting...';
+          setTimeout(() => (location.href = '/index.html'), 600);
+        } else {
+          msg.textContent = '❌ ' + (res.text || 'Invalid password');
+        }
+      } catch (err) {
+        msg.textContent = '⚠️ Connection error: ' + err.message;
+      } finally {
+        btn.disabled = false;
+      }
+    }
+
+    // Press Enter to login
+    document.getElementById('password').addEventListener('keypress', e => {
+      if (e.key === 'Enter') doLogin(e);
+    });
+  </script>
 </body>
 </html>
